# retrofits

./: Cargo.toml  DEVELOP.md  Dockerfile.build  INSTALL.md  README.md  a.txt  generate_gifs.sh  halfblocks.tape  kitty.tape
ratatui-image-patch/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml
ratatui-image-patch/src/protocol/: kitty.rs
references/: retrofits_prd.md
src/: app.rs  colormap.rs  fits.rs  lib.rs  main.rs  render.rs  stretch.rs  ui.rs  zscale.rs
tests/: pipeline_tests.rs  render_tests.rs  tui_tests.rs  viewport_tests.rs  zscale_tests.rs
