[package]
name = "retrofits"
version = "0.1.0"
edition = "2021"
description = "A high-performance FITS image viewer for the terminal"

[dependencies]
# FITS parsing
fitsrs = "0.4"

# Memory-mapped I/O
memmap2 = "0.9"

# N-dimensional arrays
ndarray = { version = "0.16", features = ["rayon"] }

# Image buffer
image = "0.25"

# Scientific colormaps
colorous = "1"

# Parallel processing
rayon = "1"

# TUI framework
ratatui = { version = "0.30", features = ["crossterm"] }
ratatui-image = { version = "10", default-features = false, features = ["image-defaults", "crossterm", "chafa-static"] }
crossterm = "0.29"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
